@@ -2,6 +2,18 @@
 
         Reviewed by Eric Seidel.
 
+        [BREWMP] Port Logging
+        https://bugs.webkit.org/show_bug.cgi?id=34300
+
+        Log calls to notImplemented() by default.
+
+        * platform/brew/LoggingBrew.cpp: Added.
+        (WebCore::InitializeLoggingChannelsIfNecessary):
+
+2010-02-02  Kwang Yul Seo  <skyul@company100.net>
+
+        Reviewed by Eric Seidel.
+
         [BREWMP] Port FileChooser
         https://bugs.webkit.org/show_bug.cgi?id=34261
 
